@@ -224,6 +224,7 @@ All (GUI):
 - added status bar fields styles support (Tim Kosse)
 - added samples/splash
 - added support for stock buttons
+- added wxTopLevelWindow::RequestUserAttention()
 
 Unix:
 
